# zarr-benchmarks-cryoet

./: .gitignore  .typos.toml  BIOIMAGETOOLS_INTEGRATION.md  CHUNKING_SHARDING_REPORT.md  CONTRIBUTING.md  CRYOET_RESULTS.md  EXECUTIVE_SUMMARY.md  EXTENDING_BENCHMARKS.md  GALLERY.md  GITHUB_PUBLISHING_TUTORIAL.md  GITHUB_READY_SUMMARY.md  LOCAL_REVIEW.md  QUICK_PUBLISH_GUIDE.md  QUICK_START.md  README_CRYOET_EXTENSION.md  README_DEBUG_COMPLETE.md  ROADMAP.md  TECHNICAL_REPORT.md  TESTING_GUIDE.md  WEBHOOK_API_GUIDE.md  ZARR_CHUNKING_SHARDING_EXPLAINED.md  advanced_compression_matrix.ipynb  benchmark_webhook_server.py  comprehensive_cryoet_notebook.ipynb  comprehensive_cryoet_notebook_executed.ipynb  cryoet_advanced_benchmark.py  cryoet_chunking_benchmark.py  cryoet_portal_benchmark.ipynb  cryoet_qc_benchmark_tool.ipynb  cryoet_real_data_benchmark.py  cryoet_real_data_quick.py  cryoet_sharding_benchmark.py  example_new_modality_benchmark.py  example_pipeline_client.py  iohub_conversion_benchmark.ipynb  multi_dataset_benchmark.py  publish_to_github.sh  pyproject.toml  requirements-cryoet.txt  run_benchmark_demo.py  (+10 more)
.github/workflows/: cryoet-benchmarks.yml
data/output/chunking_benchmarks/: chunking_results.csv
data/output/comprehensive_benchmark/: benchmark_results_256cube.csv
data/output/test_synthetic/: chunking_results.csv  compression_results.csv  integrity_results.csv  versions_results.csv
data/output/v2_v3_comparison/: v2_v3_comparison_results.csv
data/output/webhook_benchmarks/cryoet_32x32x32/: benchmark_results.csv
src/zarr_benchmarks/: dataset_types.py
