[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]


[project]
authors = [
    { email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["pytest", "pytest-benchmark", "tox", "jsonschema", "pooch"]
description = "zarr benchmarks"
license = { file = "LICENSE" }
name = "zarr_benchmarks"
readme = "README.md"
requires-python = "==3.13.*"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit"]
plots = ["matplotlib", "seaborn", "pandas"]
tensorstore = ["tensorstore==0.1.76"]
zarr-python-v2 = ["numcodecs==0.15.1", "zarr==2.18.7"]
zarr-python-v3 = ["numcodecs==0.16.2", "zarr==3.1.1"]

[tool.uv]
conflicts = [[{ extra = "zarr-python-v2" }, { extra = "zarr-python-v3" }]]

[project.urls]
Homepage = "https://github.com/HEFTIEProject/zarr-benchmarks"
Issues = "https://github.com/HEFTIEProject/zarr-benchmarks/issues"

[tool.pytest]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["tensorstore", "zarr_python"]
# Exclude CryoET connection tests from pytest collection (they have sys.exit() calls)
norecursedirs = [".git", ".tox", "venv", "venv_*"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Explicitly exclude these standalone test scripts
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
